<resources>
    <string name="app_name">Butterflies Of Greece</string>
    <string name="field_photos">Photographs of the field</string>
    <string name="introduction">Introduction</string>
    <string name="about">About</string>
    <string name="legal">Legal</string>
    <string name="contribute">Contribute</string>
    <string name="endangered">Endangered</string>
    <string name="recognition">Butterflies recognition</string>
    <string name="families">Families</string>
    <string name="species">Species</string>
    <string name="photos">Photos</string>
    <string name="search">Search</string>
    <string name="images">Images</string>
    <string name="page">Page</string>
    <string name="pdf_file">Pdf file</string>
    <string name="send_info">Share info with the author</string>
    <string name="photo_name">Photo name</string>
    <string name="date">Date</string>
    <string name="altitude">Altitude</string>
    <string name="place">Place</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="stage">Stage</string>
    <string name="genus_species">Genus species</string>
    <string name="name_species">Name species</string>
    <string name="comments">Comments</string>
    <string name="contribution_added">Your record has been added!</string>
    <string name="contribution_not_added">Your record has not been added!</string>
    <string name="introduction_title">How to use this application</string>
    <string name="introduction_subtitle">Photographs of the Butterflies of Greece for identification in the field</string>
    <string name="introduction_message">In order to make the identification of the butterflies in the field easier we present here 476 photographs. We present 165 new photographs taken from 2009-2015 while the rest 311 photographs have been published in the book. These photographs can be found in the field tab.\nIn this application you can find:</string>
    <string name="introduction_field">There is a selection of photographs for identification of the 237 butterflies of Greece in the field. You can navigate from families to species and then to the photos. Just tap on a family, or a specie, or a photo thumbnail. You can also extract images on a pdf file. Just tap the PLUS icon in order to add an image or all images of a specie or a family. Once you have selected all the images you want, tap the export button and choose the size of the exported photos. A search option is also included in the photographs of the field section.</string>
    <string name="introduction_legacy">In Legacy section, you can find detailed instructions from the Ministry of Environment for how to make an application and obtain a permission for research, investigation, photography, cinematography, collecting, capturing and exporting from Greece animals and plants (including butterflies). The application should be addressed to: Ministry for Environment and Energy, Directorate General for the Protection and Development of Forests and the Rural Environment, Directorate of Forest Management, Halkokondili 31, 104 32 Athens GREECE e-mail: diaxeirisi.dason@gmail.com. You can also find this information in https://yperdiavgeia.gr/decisions/downloadPdf/15680414</string>
    <string name="introduction_about">Information about the author of the book: ΤΗΕ BUTTERFLIES OF GREECE</string>
    <string name="introduction_contribute">Your records of the butterflies of Greece could be very useful for the protection of the butterflies and the environment in Greece. Keep your records and photographs taken always accompanied with the exact locality, coordinates (latitude and longitude) and altitude (m). Also keep any other information associated with the butterflies (eg number individuals of males or females seen, mating behavior, host plants etc). You can add this information in the contribute section. Use the form and the insert button to store data in your device and tap the export button in order to print all your records in a pdf file. You can then send this file alongside with your photos to the author pamperis@otenet.gr</string>
    <string name="introduction_endangered">The are notes for those of the 235 species of the butterflies of Greece, which are listed in various lists, for protection and study in Greece:
    \n1. Twenty nine species are listed in: ΛΕΓΑΚΙΣ, ΑΝΑΣΤΑΣΙΟΣ: Ασπόνδυλα. In: ΛΕΓΑΚΙΣ Α. και Π. Μαραγκού (επιμέλεια έκδοσης), Το κόκκινο βιβλίο των απειλούμενων Ζώων της Ελλάδας. Ελληνική Ζωωλογική Εταιρεία. Αθήνα 2009
    \n2. Three species are listed in:  NUMA, C.,  et al (2016). The status and distribution of Mediterranean butterflies. IUCN, Malaga, Spain. x + 32 pp.3.
    \n3. Forty three species are listed in:  ΠΔ 67/1981
    \n4. One species are listed in:  CITES
    \n5. Eight species are listed in:  BERNE CONVENTION Appendix II
    \n6. Three species are listed in:  92/43 HABITATS DIRECTIVE ANNEX II
    \n7. Nine species are listed in:  92/43 HABITATS DIRECTIVE ANNEX IV</string>
    <string name="introduction_recognition">In this Application your photograph can be recognized by a system designed to compare photos with AI (Artificial Intelligence). My personal database of photographs had been used for training the AI system.
    Accuracy can be further improved by adding more identified photos from the users. Users of this page are invited to upload their photos for recognition and then send them to contribute to the better training of the AI system. The more photographs in the training set, the bigger the accuracy of the system.
    The results for some of the 235 species of butterflies of Greece are presented grouped in complexes; the reasons for this is that there are limits in identification using only photographs as input, in this AI (=Artificial Intelligence) system. For the moment recognition in the following species is not accurate:
    \n
    \n&#8226; Pieris napi / balcana complex
    \n&#8226; Colias crocea / erate complex
    \n&#8226; Lepidea sinapis / juvernica complex
    \n&#8226; Plebejus argus / idas / argyrognomon complex
    \n&#8226; Polyommatus ripartii / timfristos complex
    \n&#8226; Melitaea athalia / aurelia complex
    \n&#8226; Hipparchia fagi / syriaca complex
    \n&#8226; Hipparchia senthes / volgensis / cretica / christenseni / mersina complex
    \n&#8226; Pseudochazara anthelea / amalthea complex
    \n&#8226; Maniola telmessia / chia / hallicarnassus complex
    \n&#8226; Gegenes pumilio / nostrodamus complex.
    \n
    \nIdentification of the above species could be improved only after a discovery of new crucial characters on the wings and better AI system.
    It is recommended that users, before resorting to the Application, first search for the answer in their books, on various websites, etc., and then resort to the Application to confirm their conclusion. The research in the field, the suffering of the effort with perseverance and patience, the contact with the relevant books is the sure but uphill way, to improve in the recognition of the butterflies. Quick Recognition with Application is good but do not blindly trust it and always doubt the results.</string>
    <string name="about_subtitle">With recognition of Butterflies and a selection of photographs for identification of the 237 butterflies of Greece in the field.\nby Lazaros N. Pamperis</string>
    <string name="about_first">Welcome to the Application THE BUTTERFLIES OF GREECE with part of the content as presented in the book THE BUTTERFLIES OF GREECE (ISBN 978-960-92740-1-2). For more information on the book THE BUTTERFLIES OF GREECE and the necessity for the protection of the butterflies of Greece see in http://www.pamperis.gr/index/Welcome.html. I express my sincere thanks to The John F. Kostopoulos Foundation for support given (from 1990 to 2007) for the first and second edition of the book and especially for recording, photographing, digitasation and genrally handling of the photographic data base on the butterflies of Greece I express my sincere thanks to those who supported this particular endeavor: Athanasios Elafropoulos, Georgios Kapsouras, Athanasios Maglaras, Theodosis Mamais, Simon Spencer and Stavros Stavridis.\nLazaros N. Pamperis\n Larissa Greece\nAugust 2016\nDuring 2017 new discoveries for the butterflies of Greece were: species Polyommatus timfristos (new in Science) and also rare species Muschampia cribrellum. The total number of species of the butterflies of Greece today in now 239. November 2017</string>
    <string name="about_second">Documents, Photographs\n© Lazaros N. Pamperis\nThe use of photographs is allowed only inside this app.</string>
    <string name="about_third_title">Recording the Butterflies of Greece</string>
    <string name="about_third">Your records of the butterflies of Greece could be very useful for the protection of the butterflies and the environment in Greece. Keep your records and photographs taken always accompanied with the exact locality, coordinates (latitude and longitude) and altitude (m). Also keep any other information associated with the butterflies (eg number individuals of males or females seen, mating behavior, host plants etc).\n In https://yperdiavgeia.gr/decisions/downloadPdf/15680414 you can find detailed instructions from the Ministry of the Environment (127557_2178_2015.pdf) for how to make an application and obtain a permission for research, investigation, photography, cinematography, collecting, capturing and exporting from Greece animals and plants (including butterflies). The application should be addressed to: Ministry for Environment and Energy, Directorate General for the Protection and Development of Forests and the Rural Environment, Directorate of Forest Management, Halkokondili 31, 104 32 Athens – GREECE.\ne-mail: diaxeirisi.dason@gmail.com\nFor how to obtain a permission and details for the application, see in (135366-16.pdf)\nYou can use for the contribute page of this app to fill the form (in PDF) RECORDS FOR BUTTERFLIES IN GREECE. If you want to share these records, you can send this form to pamperis@otenet.gr or to: Lazaros N. Pamperis, P.O. Box 1220, 41110 Larissa, Greece.\nUsers of this Application are welcomed to send their photographs for future (once per year) improvements of the selection of photographs, used for a more efficient identification in the field.\nYour records will improve the accuracy of the maps of distribution in a future third edition of the book THE BUTTERFLIES OF GREECE. You can send also to this e-mail your photographs for identification of the species or confirmation of the record.\nThe standard naming of the 235 species, recognized that exist for sure in Greece has been adopted in the present version of this App. The ability of recognising the specie of a butterfly from a photo has been added in this version of the App. The App will be improved constantly, with the voluntary offer of its users. I express my sincere graditude to Mr. Theodosi Mamai and to Mr. Thanasi Elafropoulo for their comments during the implementation of this App. The constant offer of photos by members of the team Butterflies &amp; Moths of Greece &amp; Cyprus in FACEBOOK is especially noted. The contribution of Butterflies\' photographs in order to be used in future versions of this App, will significantly improve the recognition accuracy. The voluntary contribution of the users will be posted (if they want to) from now on in http://www.pamperis.gr/THE_BUTTERFLIES_OF_GREECE/Anagnorise_ton_petaloudon_Recognition_of_butterflies_1.html\nSEPTEMBER 2020</string>
</resources>