<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/about_dark"
                android:paddingTop="@dimen/medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/label_about_subtitle_header"
                />


            <ImageView
                android:id="@+id/image_about_header"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                android:src="@drawable/butterfly_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_about_header"
                app:layout_constraintBottom_toBottomOf="@+id/label_about_subtitle_header"
                app:tint="@color/about" />

            <TextView
                android:id="@+id/label_about_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/title"
                android:textColor="@color/about"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_about_header"
                />

            <TextView
                android:id="@+id/label_about_subtitle_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_subtitle"
                android:textSize="@dimen/photos"
                android:textColor="@color/about"
                android:paddingBottom="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_about_header"
                app:layout_constraintEnd_toStartOf="@+id/image_about_header"
                />

            <TextView
                android:id="@+id/label_about_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_first"
                android:textSize="@dimen/photos"
                android:textColor="@color/about_dark"
                android:linksClickable="true"
                android:autoLink="all"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_about_subtitle_header"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:id="@+id/view_underline_first"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/about_dark"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                app:layout_constraintTop_toBottomOf="@+id/label_about_first"
                />

            <TextView
                android:id="@+id/label_about_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_second"
                android:textSize="@dimen/photos"
                android:textColor="@color/about_dark"
                android:linksClickable="true"
                android:autoLink="all"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_underline_first"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:id="@+id/view_underline_second"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/about_dark"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                app:layout_constraintTop_toBottomOf="@+id/label_about_second"
                />

            <TextView
                android:id="@+id/label_about_third_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_third_title"
                android:textSize="@dimen/photos"
                android:textColor="@color/about_dark"
                android:linksClickable="true"
                android:autoLink="all"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_underline_second"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/label_about_third"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_third"
                android:textSize="@dimen/photos"
                android:textColor="@color/about_dark"
                android:linksClickable="true"
                android:autoLink="all"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/medium"
                android:layout_marginRight="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_about_third_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>